tools/tests/ui/fail/l1032.cnf
// Test file for error code: L1032
// Expected error: Missing Malformed character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
